<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/recipe_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">
        <!-- recipe name category-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recipe_name_label" />

            <EditText
                android:id="@+id/recipe_name_spinner"
                style="@style/EditorFieldStyle"
                android:hint="Recipe Name"/>
        </LinearLayout>
        <!-- type category -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recipe_type_label" />

            <Spinner
                android:id="@+id/recipe_type_spinner"
                style="@style/TextViewStyle"
                android:spinnerMode="dropdown"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recipe_serving_label" />

            <EditText
                android:id="@+id/recipe_servings_spinner"
                style="@style/EditorFieldStyle"
                android:inputType="number"
                />
        </LinearLayout>

    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/dynamic_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/recipe_ingredients_title"/>

        <LinearLayout
            android:id="@+id/ingrediant_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Spinner
                android:id="@+id/ingrediant_name_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/ingrediant_value_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/ingrediant_value"
                android:inputType="number"
                android:layout_weight="1"
                />

        </LinearLayout>

        <Button
            android:id="@+id/button_add_row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_add_row"
            />

    </LinearLayout>
</ScrollView>
</LinearLayout>