<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditorActivity">

    <!-- Overview category -->
    <LinearLayout
        android:id="@+id/overview_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:layout_marginLeft="10dp"
            android:text="@string/product_overview_label" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_product_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/product_name"
                android:inputType="textCapWords" />

            <!-- Price field -->
            <EditText
                android:id="@+id/edit_product_price"
                style="@style/EditorFieldStyle"
                android:hint="@string/product_price"
                android:inputType="number" />
            <!--Weight field-->
            <EditText
                android:id="@+id/edit_product_weight"
                style="@style/EditorFieldStyle"
                android:inputType="number"
                android:hint="@string/product_weight"/>
            <!-- Quantity field -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/add_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:src="@drawable/ic_add_quantity" />

                <TextView
                    android:id="@+id/text_product_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="0"
                    android:textSize="18sp" />

                <ImageButton
                    android:id="@+id/minus_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:src="@drawable/ic_subtract_quantity" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/supplier_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <!-- supplier section -->
        <TextView
            style="@style/CategoryStyle"
            android:paddingLeft="10dp"
            android:text="@string/product_supplier_label" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <!-- Supplier Name field -->
            <EditText
                android:id="@+id/edit_supplier_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/product_name"
                android:inputType="textCapWords" />

            <!-- Supplier Number field -->
            <EditText
                android:id="@+id/edit_supplier_number"
                style="@style/EditorFieldStyle"
                android:hint="@string/product_supplier_number"
                android:inputType="number" />


        </LinearLayout>
    </LinearLayout>
</LinearLayout>