<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/recipe_view"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">
        <!-- recipe name category-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recipe_name_label" />

            <TextView
                android:id="@+id/recipe_name"
                style="@style/TextViewStyle" />
        </LinearLayout>
        <!-- type category -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recipe_type_label" />

            <TextView
                android:id="@+id/recipe_type"
                style="@style/TextViewStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recipe_serving_label" />

            <TextView
                android:id="@+id/recipe_servings"
                style="@style/TextViewStyle" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recipe_ingredients_title" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ingrediant_name_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/ingrediant_value_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>